[gd_scene load_steps=12 format=2]

[ext_resource path="res://unit/Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://unit/enemy/FireBug.gd" type="Script" id=2]
[ext_resource path="res://common/DamageArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://unit/VisionSensor.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/3d/firebug.escn" type="PackedScene" id=5]


[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0.423529, 0, 1 )

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.3
bottom_radius = 0.3

[sub_resource type="CylinderShape" id=3]
radius = 0.3

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.3, 0.3, 0.3 )

[sub_resource type="CylinderShape" id=5]
radius = 0.3

[sub_resource type="CylinderShape" id=6]
radius = 5.0

[node name="FireBug" index="0" groups=[
"Enemy",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="." index="0"]
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="." index="1"]
shape = SubResource( 3 )

[node name="AttackArea" type="Area" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
monitorable = false
collision_layer = 8
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="AttackArea" index="0"]
shape = SubResource( 4 )

[node name="DestructibleArea" parent="." index="3" instance=ExtResource( 3 )]

[node name="CollisionShape" type="CollisionShape" parent="DestructibleArea" index="1"]
shape = SubResource( 5 )

[node name="VisionSensor" parent="." index="4" instance=ExtResource( 4 )]

[node name="CollisionShape" type="CollisionShape" parent="VisionSensor" index="0"]
shape = SubResource( 6 )

[node name="Scene Root" parent="." index="5" instance=ExtResource( 5 )]
transform = Transform( -0.5, 0, -4.37114e-008, 0, 0.5, 0, 4.37114e-008, 0, -0.5, 0, 0, 0 )
[connection signal="die" from="DestructibleArea" to="." method="_on_DestructibleArea_die"]
[connection signal="body_detected" from="VisionSensor" to="." method="_on_VisionSensor_body_detected"]
